metadatafullcopy/unpackaged/objects/Invoice_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsCredit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this amount is to be Credited against total charges on invoice</description>
        <inlineHelpText>Indicates if this amount is to be Credited against total charges on invoice.</inlineHelpText>
        <label>IsCredit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <inlineHelpText>If other is selected on the name, please enter a custom name.</inlineHelpText>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickListName__c</fullName>
        <label>Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asbestos Abatement</fullName>
                </value>
                <value>
                    <fullName>Bio Hazard Abatement</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Demolition Services</fullName>
                </value>
                <value>
                    <fullName>Emergency Services Performed</fullName>
                </value>
                <value>
                    <fullName>Health Science Services</fullName>
                </value>
                <value>
                    <fullName>Lead Abatement</fullName>
                </value>
                <value>
                    <fullName>Mold Remediation</fullName>
                </value>
                <value>
                    <fullName>Restoration Services - Construction</fullName>
                </value>
                <value>
                    <fullName>Restoration Services - Contents</fullName>
                </value>
                <value>
                    <fullName>Technical Services</fullName>
                </value>
                <value>
                    <fullName>* A 10% Discount Has Been Applied</fullName>
                </value>
                <value>
                    <fullName>* A 15% Discount Has Been Applied</fullName>
                </value>
                <value>
                    <fullName>* Asbestos Containing Materials Were Removed &amp; Disposed</fullName>
                </value>
                <value>
                    <fullName>* Bio Hazard Abatement and Clean Up</fullName>
                </value>
                <value>
                    <fullName>* Change Order #__:</fullName>
                </value>
                <value>
                    <fullName>* Consulting Services per Attached Breakdown</fullName>
                </value>
                <value>
                    <fullName>*  Emergency Board Up</fullName>
                </value>
                <value>
                    <fullName>* Emergency Roof Tarp</fullName>
                </value>
                <value>
                    <fullName>*  Equipment</fullName>
                </value>
                <value>
                    <fullName>* Estimate Fee</fullName>
                </value>
                <value>
                    <fullName>* Fire Damage Repairs</fullName>
                </value>
                <value>
                    <fullName>* Fire Damage Repairs, Less Deductible.</fullName>
                </value>
                <value>
                    <fullName>* Inspection Fee</fullName>
                </value>
                <value>
                    <fullName>*  Labor</fullName>
                </value>
                <value>
                    <fullName>* Labor, Materials and Equipment.</fullName>
                </value>
                <value>
                    <fullName>* Ladder Assist</fullName>
                </value>
                <value>
                    <fullName>*  Materials</fullName>
                </value>
                <value>
                    <fullName>*  Miscellaneous Expenses</fullName>
                </value>
                <value>
                    <fullName>* Mold Contaminated Materials Were Remediated &amp; Removed.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <label>Invoice Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_description_length</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Description__c)  &gt; 255</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Description field cannot contain more than 255 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_Other_Not_Required</fullName>
        <active>true</active>
        <description>Make sure that other is not entered when not required.</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(PickListName__c  , &apos;Other&apos;)),  NOT(ISBLANK(Other__c  )))</errorConditionFormula>
        <errorDisplayField>Other__c</errorDisplayField>
        <errorMessage>You must not enter a value, when there is a name selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_Other_Required</fullName>
        <active>true</active>
        <description>Make sure that other is entered when needed.</description>
        <errorConditionFormula>AND(ISPICKVAL(PickListName__c  , &apos;Other&apos;),  ISBLANK(Other__c  ))</errorConditionFormula>
        <errorDisplayField>Other__c</errorDisplayField>
        <errorMessage>You need to enter a value, when the &quot;Other&quot; option is selected on the name field.</errorMessage>
    </validationRules>
</CustomObject>